--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@ for (i=0;i<=snowmax;i++) {
 if (browserok) {
 	window.onload=initsnow
 }
+	var i = 0;
+var txt = 'Lorem ipsum dummy text blabla.';
+var speed = 50;
+
+function typeWriter() {
+  if (i < txt.length) {
+    document.getElementById("demo").innerHTML += txt.charAt(i);
+    i++;
+    setTimeout(typeWriter, speed);
+  }
+}
 </script>
 
 <style type="text/css">
