--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@ var ie5=document.all&&document.getElementById&&!browserinfos.match(/Opera/)
 var ns6=document.getElementById&&!document.all
 var opera=browserinfos.match(/Opera/)  
 var browserok=ie5||ns6||opera
+var i = 0;
+var txt = 'Lorem ipsum dummy text blabla.';
+var speed = 50;
+
+function typeWriter() {
+  if (i < txt.length) {
+    document.getElementById("demo").innerHTML += txt.charAt(i);
+    i++;
+    setTimeout(typeWriter, speed);
+  }
+}
 
 function randommaker(range) {		
 	rand=Math.floor(range*Math.random())
@@ -85,17 +96,6 @@ for (i=0;i<=snowmax;i++) {
 if (browserok) {
 	window.onload=initsnow
 }
-	var i = 0;
-var txt = 'Lorem ipsum dummy text blabla.';
-var speed = 50;
-
-function typeWriter() {
-  if (i < txt.length) {
-    document.getElementById("demo").innerHTML += txt.charAt(i);
-    i++;
-    setTimeout(typeWriter, speed);
-  }
-}
 </script>
 
 <style type="text/css">
@@ -105,6 +105,6 @@ function typeWriter() {
 
 <table width=100% height=100%>
 	<td align=center>
-		<div id="q">hacked by Hmei7</div>
+		<div id="typeWriter()"/div>
 	</td>
 </table>
