--- a/index.html
+++ b/index.html
@@ -105,6 +105,6 @@ if (browserok) {
 
 <table width=100% height=100%>
 	<td align=center>
-		<div id="typeWriter()"/div>
+		<script src="text.html"></script>
 	</td>
 </table>
