--- a/index.html
+++ b/index.html
@@ -21,12 +21,19 @@
 });
    </script>
 
-        <div class="candle">
+        <div class="candle1">
     <div class="light"></div>
     <div class="light"></div>
     <div class="light"></div>
     <div class="light"></div>
     <div class="light"></div>
+</div>
+<div class="candle2">
+<div class="light"></div>
+<div class="light"></div>
+<div class="light"></div>
+<div class="light"></div>
+<div class="light"></div>
 </div>
 <!--An Open Source Code, but Effects and musics are by @Sami Khan-->
 <svg id="cake" version="1.1" x="0px" y="0px" width="200px" height="500px" viewBox="0 0 200 500" enable-background="new 0 0 200 500" xml:space="preserve">
