--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 <div class="light"></div>
 <div class="light"></div>
 </div>
+<div class="candle3">
+<div class="light"></div>
+<div class="light"></div>
+<div class="light"></div>
+<div class="light"></div>
+<div class="light"></div>
+</div>
 <!--An Open Source Code, but Effects and musics are by @Sami Khan-->
 <svg id="cake" version="1.1" x="0px" y="0px" width="200px" height="500px" viewBox="0 0 200 500" enable-background="new 0 0 200 500" xml:space="preserve">
     <path fill="#a88679" d="M173.667-13.94c-49.298,0-102.782,0-147.334,0c-3.999,0-4-16.002,0-16.002
