--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <audio class="song" loops controls>
    <source src="https://www.8notes.com/school/mp32/piano/happy_birthday.mp3"></audio>
    <script>
-   alert("Click Anywhere to enjoy Music 🎶🎵");
+   alert("klik ok yaaa!");
    $('#clk').click(function(){
         var audio = $('.song')[0];
         try{
