--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body id="clk">
    <audio class="song" loops controls>
-   <source src="https://www.8notes.com/school/mp32/piano/happy_birthday.mp3"></audio>
+   <source src="Happy Birthday.mp3"></audio>
    <script>
    alert("klik ok yaaa!");
    $('#clk').click(function(){
