--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <audio class="song" loops controls>
    <source src="Happy Birthday.mp3"></audio>
    <script>
-   alert("klik ok yaaa!");
+   alert("klik kuenya yaaa!");
    $('#clk').click(function(){
         var audio = $('.song')[0];
         try{
