--- a/index.html
+++ b/index.html
@@ -192,10 +192,8 @@
     </path>
     <rect x="10" y="475.571" fill="#fefae9" width="180" height="5" />
 </svg>
-<div class="text">
-  <h1>Happy Birthday!</h1>
- <p><a href="https://www.sololearn.com/Profile/10764542/?ref=app">🔔 Noor ❤  🎉</a>
-</p>
+<div class="typewriter">
+  <h1>Happy Birthday! Rosella A.</h1>
 </div>
 </body>
 </html>
