--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>Happy Birthday</title>
-        <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+        <script src="script.js"></script>
         <link rel="stylesheet" href="alan2.css">
     </head>
     <body id="clk">
    <audio class="song" loops controls>
-   <source src="Happy Birthday.mp3"></audio>
+   <source src="https://www.8notes.com/school/mp32/piano/happy_birthday.mp3"></audio>
    <script>
-   alert("klik kuenya yaaa!");
+   alert("Click Anywhere to enjoy Music 🎶🎵");
    $('#clk').click(function(){
         var audio = $('.song')[0];
         try{
@@ -192,8 +192,16 @@
     </path>
     <rect x="10" y="475.571" fill="#fefae9" width="180" height="5" />
 </svg>
-<div class="typewriter">
+<div class="tulisan1">
   <h1>Happy Birthday! Rosella A.</h1>
+</div>
+<table width=100% height=100%>
+	<td align=center>
+		<div id="typewrite">
+  <a href="script.js" class="typewrite" data-period="2000" data-type='[ "SEMOGA PANJANG UMUR,", "SEHAT SELALU", "SUKSES SELALU", "SEMOGA YANG DISEMOGAKAN AKAN TERCAPAI", "AAMIIN", "JANGAN LUPA TAMBAH TUAAA WKWK" ]'>
+    <span class="wrap"></span>
+  </a>
+</div>
 </div>
 </body>
 </html>
