--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     <body id="clk">
    <audio class="song" loops controls>
-   <source src="https://www.8notes.com/school/mp32/piano/happy_birthday.mp3"></audio>
+   <source src="Happy Birthday.mp3"></audio>
    <script>
-   alert("Click Anywhere to enjoy Music 🎶🎵");
+   alert("klik kuenya yaa");
    $('#clk').click(function(){
         var audio = $('.song')[0];
         try{
@@ -42,7 +42,7 @@
 <div class="light"></div>
 <div class="light"></div>
 </div>
-<!--An Open Source Code, but Effects and musics are by @Sami Khan-->
+<!--kue-->
 <svg id="cake" version="1.1" x="0px" y="0px" width="200px" height="500px" viewBox="0 0 200 500" enable-background="new 0 0 200 500" xml:space="preserve">
     <path fill="#a88679" d="M173.667-13.94c-49.298,0-102.782,0-147.334,0c-3.999,0-4-16.002,0-16.002
         c44.697,0,96.586,0,147.334,0C177.667-29.942,177.668-13.94,173.667-13.94z">
