--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
     <rect x="10" y="475.571" fill="#fefae9" width="180" height="5" />
 </svg>
 <div class="tulisan1">
-  <h1>Happy Birthday! Rosella A.</h1>
+  <h1>Happy Birthday! Misbah Noor Azis.</h1>
 </div>
 <table width=100% height=100%>
 	<td align=center>
 		<div id="typewrite">
-  <a href="script.js" class="typewrite" data-period="2000" data-type='[ "SEMOGA PANJANG UMUR,", "SEHAT SELALU", "SUKSES SELALU", "SEMOGA YANG DISEMOGAKAN AKAN TERCAPAI", "AAMIIN", "JANGAN LUPA TAMBAH TUAAA WKWK" ]'>
+  <a href="script.js" class="typewrite" data-period="2000" data-type='[ "MISBAH JANCUK,", "J", "A", "N", "C", "U", "K", "JANCUK" ]'>
     <span class="wrap"></span>
   </a>
 </div>
