--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body id="clk">
    <audio class="song" loops controls>
-   <source src="Happy Birthday.mp3"></audio>
+   <source src="Happy Birthday2.mp3"></audio>
    <script>
    alert("klik kuenya yaa");
    $('#clk').click(function(){
