--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <audio class="song" loops controls>
    <source src="Happy Birthday2.mp3"></audio>
    <script>
-   alert("klik kuenya yaa");
+   alert("klik kue ne");
    $('#clk').click(function(){
         var audio = $('.song')[0];
         try{
@@ -193,12 +193,12 @@
     <rect x="10" y="475.571" fill="#fefae9" width="180" height="5" />
 </svg>
 <div class="tulisan1">
-  <h1>Happy Birthday! Misbah Noor Azis.</h1>
+  <h1>Happy Birthday! Diana Kumala S.</h1>
 </div>
 <table width=100% height=100%>
 	<td align=center>
 		<div id="typewrite">
-  <a href="script.js" class="typewrite" data-period="2000" data-type='[ "MISBAH JANCUK,", "J", "A", "N", "C", "U", "K", "JANCUK" ]'>
+  <a href="script.js" class="typewrite" data-period="2000" data-type='[ "SEMOGA PANJANG UMUR,", "SEHAT SELALU", "SUKSES SELALU", "SEMOGA YANG DISEMOGAKAN AKAN TERCAPAI", "NDANG NIKAH!!! WKWKWK", "AAMIIN" ]'>
     <span class="wrap"></span>
   </a>
 </div>
