--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     <body id="clk">
    <audio class="song" loops controls>
-   <source src="Happy Birthday2.mp3"></audio>
+   <source src="Happy Birthday3.mp3"></audio>
    <script>
-   alert("klik kue ne");
+   alert("Lagu Klik Kue ne");
    $('#clk').click(function(){
         var audio = $('.song')[0];
         try{
