--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <rect x="10" y="475.571" fill="#fefae9" width="180" height="5" />
 </svg>
 <div class="tulisan1">
-  <h1>Happy Birthday! Diana Kumala S.</h1>
+  <h1>Happy Birthday! Diana K.</h1>
 </div>
 <table width=100% height=100%>
 	<td align=center>
