--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
     <rect x="10" y="475.571" fill="#fefae9" width="180" height="5" />
 </svg>
 <div class="tulisan1">
-  <h1>Happy Birthday! Diana K.</h1>
+  <h1>Happy Birthday! Riski Supriyati</h1>
 </div>
 <table width=100% height=100%>
 	<td align=center>
 		<div id="typewrite">
-  <a href="script.js" class="typewrite" data-period="2000" data-type='[ "SEMOGA PANJANG UMUR,", "SEHAT SELALU", "SUKSES SELALU", "SEMOGA YANG DISEMOGAKAN AKAN TERCAPAI", "NDANG NIKAH!!! WKWKWK", "AAMIIN" ]'>
+  <a href="script.js" class="typewrite" data-period="2000" data-type='[ "SEMOGA PANJANG UMUR,", "SELALU siappp", "AAMIIN" ]'>
     <span class="wrap"></span>
   </a>
 </div>
